<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screens.NotesMenuFragment">

    <LinearLayout
        android:id="@+id/ll_title_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="top"
        app:layout_dodgeInsetEdges="bottom">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title_settings_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:text="@string/title_application_menu"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"/>

    <View
        android:id="@+id/view_settings_1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?attr/colorPrimary"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="2dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_settings_default_color"
        style="@style/SettingsButtons"
        android:text="@string/settings_default_note_color"
        app:icon="@drawable/ic_palette_black_48dp"
        app:strokeColor="?attr/colorPrimary"
        app:strokeWidth="1dp"
        app:cornerRadius="5dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_settings_wastebasket"
        style="@style/SettingsButtons"
        android:text="@string/settings_wastebasket"
        app:icon="@drawable/ic_delete_black_48dp"
        app:strokeColor="?attr/colorPrimary"
        app:strokeWidth="1dp"
        app:cornerRadius="5dp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_settings_color_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:behavior_hideable="true"
        app:layout_insetEdge="bottom">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mb_settings_pink"
            style="@style/SettingsColorButtons"
            android:backgroundTint="@color/pink_100"
            app:cornerRadius="5dp"
            app:layout_constraintEnd_toStartOf="@+id/mb_settings_purple"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="?attr/colorPrimary"
            app:strokeWidth="1dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mb_settings_purple"
            style="@style/SettingsColorButtons"
            android:backgroundTint="@color/purple_100"
            app:cornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/mb_settings_pink"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="?attr/colorPrimary"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mb_settings_indigo"
            style="@style/SettingsColorButtons"
            android:backgroundTint="@color/indigo_100"
            app:cornerRadius="5dp"
            app:layout_constraintEnd_toStartOf="@+id/mb_settings_green"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mb_settings_pink"
            app:strokeColor="?attr/colorPrimary"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mb_settings_green"
            style="@style/SettingsColorButtons"
            android:backgroundTint="@color/green_100"
            app:cornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/mb_settings_indigo"
            app:layout_constraintTop_toBottomOf="@id/mb_settings_purple"
            app:strokeColor="?attr/colorPrimary"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mb_settings_orange"
            style="@style/SettingsColorButtons"
            android:backgroundTint="@color/orange_100"
            app:cornerRadius="5dp"
            app:layout_constraintEnd_toStartOf="@+id/mb_settings_brown"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mb_settings_indigo"
            app:strokeColor="?attr/colorPrimary"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mb_settings_brown"
            style="@style/SettingsColorButtons"
            android:backgroundTint="@color/brown_100"
            app:cornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/mb_settings_orange"
            app:layout_constraintTop_toBottomOf="@id/mb_settings_green"
            app:strokeColor="?attr/colorPrimary"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mb_settings_gray"
            style="@style/SettingsColorButtons"
            android:backgroundTint="@color/gray_100"
            app:cornerRadius="5dp"
            app:layout_constraintEnd_toStartOf="@+id/mb_settings_blue_gray"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mb_settings_orange"
            app:strokeColor="?attr/colorPrimary"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mb_settings_blue_gray"
            style="@style/SettingsColorButtons"
            android:backgroundTint="@color/blue_gray_100"
            app:cornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/mb_settings_gray"
            app:layout_constraintTop_toBottomOf="@id/mb_settings_brown"
            app:strokeColor="?attr/colorPrimary"
            app:strokeWidth="1dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>